# lazycreatives-uploader

./: .gitignore  LICENSE  README.md  index.html  pricing.html
.github/workflows/: ci.yml
backend/: pyproject.toml  sidecar.spec
backend/lazyupload/: __init__.py  catalog.py  cli.py  connect.py  crypto.py  entitlement.py  hashing.py  models.py  scanner.py  scheduler.py  server.py  service.py  soundcloud.py
backend/lazyupload/api/: app.py  auth.py  progress.py  schemas.py
backend/tests/: conftest.py  helpers.py  test_api.py  test_broker_mode.py  test_catalog.py  test_entitlement.py  test_features.py  test_manage.py  test_scanner.py  test_service.py  test_soundcloud.py
brand/: make_icons.py
broker/: Dockerfile  README.md  app.py  requirements.txt  test_broker.py
electron/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
electron/electron/: main.js  preload.js  sidecar.js  tray.js
electron/scripts/: run-electron.js
electron/src/: App.tsx  api.ts  main.tsx  theme.css  types.ts  useProgress.ts
electron/src/components/: BrandMark.tsx  Connect.tsx  Folders.tsx  Nav.tsx  ui.tsx
electron/src/screens/: History.tsx  Home.tsx  Manage.tsx  Settings.tsx  Setup.tsx  Upload.tsx
electron/test/: ui.test.ts
