[project]
name = "lazyupload"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12",      # uvicorn needs a WS library to serve /ws/progress live
    "apscheduler>=3.10,<4", # scheduled / watch-folder auto-uploads
    "requests>=2.31",       # multipart upload + OAuth token calls to SoundCloud
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "responses>=0.25"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
